--- a/app/src/main/res/layout/activity_lst_characters.xml
+++ b/app/src/main/res/layout/activity_lst_characters.xml
@@ -1,15 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayoutLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:weightSum="100"
     android:orientation="vertical"
-    tools:context=".characters.lstCharacters.view.LstCharactersActivity"
+    tools:context=".MainActivity"
     android:background="@color/design_default_color_secondary">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="10"
+        android:text="Lista de Personajes"
+        android:textSize="35dp"
+        android:textStyle="bold"
+        android:textColor="@color/red"
+        android:background="@color/white"
+        android:paddingTop="10dp"
+        android:textAlignment="center"
+        tools:ignore="RtlCompat" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerCharacters"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-</LinearLayoutLayout>
+        android:layout_height="0dp"
+        android:layout_weight="90"/>
+</LinearLayout>
