--- a/app/src/main/res/layout/row_character.xml
+++ b/app/src/main/res/layout/row_character.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    android:id="@+id/tarjeta"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
@@ -29,14 +31,10 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Nombre"
-            android:textSize="30sp"/>
+            android:textColor="@color/black"
+            android:textSize="40sp"
+            android:textAlignment="center"
+            android:paddingTop="40dp"/>
 
-        <TextView
-            android:id="@+id/txtDescripcion"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Descripción"
-            android:textSize="20sp"/>
     </LinearLayout>
 </LinearLayout>
