--- a/app/src/main/res/layout/activity_filter_character.xml
+++ b/app/src/main/res/layout/activity_filter_character.xml
@@ -7,7 +7,7 @@
     android:weightSum="100"
     android:orientation="vertical"
     tools:context=".MainActivity"
-    android:background="@color/design_default_color_secondary">
+    android:background="@color/white">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -33,8 +33,7 @@
             android:id="@+id/spFilterFiltro"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="20"
-            android:background="@color/white"/>
+            android:layout_weight="20"/>
 
     </LinearLayout>
 
