--- a/app/src/main/res/layout/activity_lst_characters.xml
+++ b/app/src/main/res/layout/activity_lst_characters.xml
@@ -7,7 +7,7 @@
     android:weightSum="100"
     android:orientation="vertical"
     tools:context=".MainActivity"
-    android:background="@color/design_default_color_secondary">
+    android:background="@color/white">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,7 +19,7 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="70"
+            android:layout_weight="80"
             android:text="Lista de Personajes"
             android:textSize="30dp"
             android:textStyle="bold"
@@ -33,8 +33,7 @@
             android:id="@+id/spFiltro"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="30"
-            android:background="@color/white"/>
+            android:layout_weight="20"/>
 
     </LinearLayout>
 
