--- a/app/src/main/res/layout/activity_fd_characters.xml
+++ b/app/src/main/res/layout/activity_fd_characters.xml
@@ -1,41 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+    android:id="@+id/activity_fdcharacters_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="100"
     android:orientation="vertical"
+    android:scrollbars="vertical"
     tools:context=".FdCharactersActivity">
 
 
-    <ImageView
-        android:id="@+id/fdimagen"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="50"
-        android:layout_gravity="center"
-        android:src="@drawable/ic_launcher_background"/>
+<!--    <ImageView-->
+<!--        android:id="@+id/fdimagen"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="0dp"-->
+<!--        android:layout_weight="50"-->
+<!--        android:layout_gravity="center"-->
+<!--        android:layout_marginTop="15dp"-->
+<!--        android:src="@drawable/ic_launcher_background"/>-->
 
-    <TextView
-        android:id="@+id/fdnombre"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="10"
-        android:text="Nombre"
-        android:textSize="40dp"
-        android:textColor="@color/black"
-        android:textAlignment="center"
-        android:scrollbars="vertical"
-        android:paddingTop="10dp"/>
+<!--    <TextView-->
+<!--        android:id="@+id/fdnombre"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Nombre"-->
+<!--        android:textSize="40dp"-->
+<!--        android:layout_marginLeft="4dp"-->
+<!--        android:layout_marginRight="4dp"-->
+<!--        android:textColor="@color/black"-->
+<!--        android:textAlignment="center"-->
+<!--        android:scrollbars="vertical"-->
+<!--        android:paddingTop="10dp"/>-->
 
-    <TextView
-        android:id="@+id/fdDescripcion"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="40"
-        android:textSize="25dp"
-        android:scrollbars="vertical"
-        android:textAlignment="center"/>
+<!--    <TextView-->
+<!--        android:id="@+id/fdDescripcion"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="0dp"-->
+<!--        android:layout_weight="50"-->
+<!--        android:textSize="25dp"-->
+<!--        android:textAlignment="center"/>-->
 
 </LinearLayout>
