--- a/app/src/main/res/layout/row_character.xml
+++ b/app/src/main/res/layout/row_character.xml
@@ -1,40 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:id="@+id/tarjeta"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="200dp"
+    android:layout_height="200dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal"
+    app:cardCornerRadius="4dp"
+    app:cardElevation="4dp"
+    app:cardUseCompatPadding="true">
 
-    android:layout_width="match_parent"
-    android:layout_height="150dp"
-    android:background="@color/design_default_color_secondary"
-    android:weightSum="100">
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/imgCharacter"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="34"
-        android:scaleType="fitXY"
-        android:src="@drawable/abc_vector_test" />
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_weight="66"
-        android:layout_height="match_parent"
-        android:background="@color/design_default_color_on_primary"
-        android:orientation="vertical">
+        <ImageView
+            android:id="@+id/row_character_ivImg"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginLeft="50dp"
+            android:layout_marginTop="10dp"/>
 
         <TextView
-            android:id="@+id/txtNombre"
+            android:id="@+id/row_character_tvName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Nombre"
-            android:textColor="@color/black"
-            android:textSize="40sp"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
             android:textAlignment="center"
-            android:paddingTop="40dp"/>
+            android:text="Name"
+            android:layout_below="@+id/row_character_ivImg"/>
 
-    </LinearLayout>
-</LinearLayout>
+
+    </RelativeLayout>
+
+</androidx.cardview.widget.CardView>
